# books-agent

./: .gitignore  .replit  INSTRUCTIONS.md  MCP_SETUP_SUCCESS.md  README.md  SUMMARY.txt  book_agent.py  mcp-agent.jsonl  mcp_agent.config.yaml  mcp_agent.config.yaml.example  mcp_agent.secrets.yaml.example  pyproject.toml  replit.md  test_both_mcp_servers.py  test_brave_isbn.py  test_brave_mcp.py  test_brave_mcp_simple.py  test_openlibrary_mcp.py
files/: README.txt
mcps/open-library/: README.md  package-lock.json  package.json
src/: book_agent.py  book_extractor.py  example_usage.py  models.py  web_enrichment.py
tests/: FINAL_MCP_RESULTS.md  MCP_TEST_RESULTS.md  README.md  SUCCESS_BOTH_MCP_SERVERS.md  mcp-agent.jsonl  test_both_mcps.py  test_brave_search_mcp.py  test_open_library_mcp.py
